--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 					<div class="main-block__body">
 						<div class="main-block__content">
 							<div class="main-block__block-text block-text">
-								<p class="block-text__title">Студия разработки <br>программного обеспечения <br><span>с
+								<h1 class="block-text__title">Студия разработки <br>программного обеспечения <br><span>с
 										продуктовым
-										мышлением</span></p>
+										мышлением</span></h1>
 								<p class="block-text__text">Мы создаем кроссплатформенные мобильные<br> приложения и
 									веб-платформы
 									и
